versioned_docs/version-2.5/reference/targets/python_tests.mdx
---
title: python_tests
# The old-style `code...code` anchors are heading level 6, and shouldn't be visible in ToC
toc_max_heading_level: 5
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

Python tests, written in either Pytest style or unittest style.

All test util code, other than `conftest.py`, should go into a dedicated `python_library()` target and then be included in the `dependencies` field.

See (https://www.pantsbuild.org/v2.5/docs/python-test-goal).

Backend: <span className="color--primary">``</span>

---

<span className={styles.options}>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetagscode}
</div>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `./pants --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedescriptioncode}
</div>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `./pants list --documented ::` to see all targets with descriptions.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeinterpreter_constraintscode}
</div>

## `interpreter_constraints`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

The Python interpreters this code is compatible with.

Each element should be written in pip-style format, e.g. &#x27;CPython==2.7.\*&#x27; or &#x27;CPython&#x3E;=3.6,&#x3C;4&#x27;. You can leave off `CPython` as a shorthand, e.g. &#x27;&#x3E;=2.7&#x27; will be expanded to &#x27;CPython&#x3E;=2.7&#x27;.

Specify more than one element to OR the constraints, e.g. `['PyPy==3.7.*', 'CPython==3.7.*']` means either PyPy 3.7 _or_ CPython 3.7.

If the field is not set, it will default to the option `[python-setup].interpreter_constraints`.

See (https://www.pantsbuild.org/v2.5/docs/python-interpreter-compatibility).

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codesourcescode}
</div>

## `sources`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`('test_*.py', '*_test.py', 'tests.py', 'conftest.py', 'test_*.pyi', '*_test.pyi', 'tests.pyi')`}
>

A list of files and globs that belong to this target.

Paths are relative to the BUILD file&#x27;s directory. You can ignore files/globs by prefixing them with `!`.

Example: `sources=['example.py', 'test_*.py', '!test_ignore.py']`.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedependenciescode}
</div>

## `dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Addresses to other targets that this target depends on, e.g. [&#x27;helloworld/subdir:lib&#x27;].

Alternatively, you may include file names. Pants will find which target owns that file, and create a new target from that which only includes the file in its `sources` field. For files relative to the current BUILD file, prefix with `./`; otherwise, put the full path, e.g. [&#x27;./sibling.txt&#x27;, &#x27;resources/demo.json&#x27;].

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetimeoutcode}
</div>

## `timeout`

<Field
    type_repr={`int | None`}
    default_repr={`None`}
>

A timeout (in seconds) used by each test file belonging to this target.

This only applies if the option `--pytest-timeouts` is set to True.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#coderuntime_package_dependenciescode}
</div>

## `runtime_package_dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Addresses to targets that can be built with the `./pants package` goal and whose resulting artifacts should be included in the test run.

Pants will build the artifacts as if you had run `./pants package`. It will include the results in your test&#x27;s chroot, using the same name they would normally have, but without the `--distdir` prefix (e.g. `dist/`).

You can include anything that can be built by `./pants package`, e.g. a `pex_binary`, `python_awslambda`, or an `archive`.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeextra_env_varscode}
</div>

## `extra_env_vars`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Additional environment variables to include in test processes. Entries are strings in the form `ENV_VAR=value` to use explicitly; or just `ENV_VAR` to copy the value of a variable in Pants&#x27;s own environment. This will be merged with and override values from [test].extra_env_vars.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_blackcode}
</div>

## `skip_black`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

If true, don&#x27;t run Black on this target&#x27;s code.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_docformattercode}
</div>

## `skip_docformatter`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

If true, don&#x27;t run Docformatter on this target&#x27;s code.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_flake8code}
</div>

## `skip_flake8`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

If true, don&#x27;t run Flake8 on this target&#x27;s code.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_isortcode}
</div>

## `skip_isort`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

If true, don&#x27;t run isort on this target&#x27;s code.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_mypycode}
</div>

## `skip_mypy`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

If true, don&#x27;t run MyPy on this target&#x27;s code.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_banditcode}
</div>

## `skip_bandit`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

If true, don&#x27;t run Bandit on this target&#x27;s code.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_pylintcode}
</div>

## `skip_pylint`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

If true, don&#x27;t run Pylint on this target&#x27;s code.

</Field>

</span>
